ARROW-4600: [Ruby] Arrow::DictionaryArray#[] returns dictionary value